force-app/main/default/objects/Utilization_Licensee__c/Utilization_Licensee__c.object-meta.xml
<CustomObject>
    <description>Licensee with license counts</description>
    <label>Utilization Licensee</label>
    <nameField>
        <label>Licensee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utilization Licensees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>