force-app/main/default/objects/Utilization_Licensee__c/fields/Exclusive_Count__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Count__c</fullName>
    <label>Exclusive Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>