force-app/main/default/objects/Utilization_Licensee__c/fields/Forrester_Licensee_Name__c.field-meta.xml
<CustomField>
    <fullName>Forrester_Licensee_Name__c</fullName>
    <label>Forrester Licensee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>