force-app/main/default/objects/Utilization_Licensee__c/fields/Licensee_Name__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Name__c</fullName>
    <label>Licensee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>