force-app/main/default/objects/Utilization_Licensee__c/fields/Small_Business__c.field-meta.xml
<CustomField>
    <fullName>Small_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Small Business</label>
    <type>Checkbox</type>
</CustomField>