force-app/main/default/objects/Utilization_Licensee__c/fields/Utilization_Report__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Report__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Utilization Report</label>
    <referenceTo>Utilization_Report__c</referenceTo>
    <relationshipName>Utilization_Licensee_Counts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>